--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -14,14 +14,6 @@ jobs:
     defaults:
       run:
         shell: msys2 {0}
-    strategy:
-      fail-fast: false
-      matrix:
-        include:
-          - { sys: mingw64, env: x86_64 }
-          - { sys: mingw32, env: i686 }
-          - { sys: ucrt64,  env: ucrt-x86_64 }
-          - { sys: clang64, env: clang-x86_64 }
     steps:
       - name: Checkout
         uses: actions/checkout@v4
@@ -30,8 +22,8 @@ jobs:
       - name: Setup msys2
         uses: msys2/setup-msys2@v2
         with:
-          msystem: ${{matrix.sys}}
-          install: unzip make git python mingw-w64-${{matrix.env}}-gcc mingw-w64-${{matrix.env}}-glew mingw-w64-${{matrix.env}}-SDL2 mingw-w64-${{matrix.env}}-SDL
+          msystem: ucrt64
+          install: unzip make git python mingw-w64-ucrt-x86_64-gcc mingw-w64-ucrt-x86_64-glew mingw-w64-ucrt-x86_64-SDL2 mingw-w64-ucrt-x86_64-SDL
       - name: Cache rom
         uses: actions/cache@v3
         id: rom-cache
@@ -47,7 +39,7 @@ jobs:
       - name: Upload
         uses: actions/upload-artifact@v3
         with:
-          name: artifacts-${{matrix.sys}}
+          name: artifacts
           path: |
             ./build/*/*.exe
             ./build/*/res/*
