--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -17,7 +17,7 @@ jobs:
       - name: Checkout
         uses: actions/checkout@v4
         with:
-          repository: AloXado320/sm64ex-alo
+          repository: alexkiri/sm64ex-alo
       - name: Setup msys2
         uses: msys2/setup-msys2@v2
         with:
